--- a/templates/layout.html
+++ b/templates/layout.html
@@ -7,7 +7,7 @@
     <body>
         <header>
             <div class="container">
-                <h1 class="title">Learning Flask</h1>
+                <h1 class="title">Attempting Ninja Money Game</h1>
             </div>
         </header>
         
