--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,16 +1,13 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link href='http://fonts.googleapis.com/css?family=Open+Sans:300,400,600' rel='stylesheet'>
-        <link href="{{ url_for('static', filename='css/main.css') }}" rel="stylesheet">
+        <!-- <link href='http://fonts.googleapis.com/css?family=Open+Sans:300,400,600' rel='stylesheet'> -->
+        <!-- <link href="{{ url_for('static', filename='css/main.css') }}" rel="stylesheet"> -->
+        <link href="{{ url_for('static', filename='css/bootstrap.css') }}" rel="stylesheet">
+        <title>Ninja Money</title>
     </head>
     <body>
-        <header>
-            <div class="container">
-                <h1 class="title">Attempting Ninja Money Game</h1>
-            </div>
-        </header>
-        
+       
         {% block content %}
         {% endblock %}
 
